--- a/easy3d/platform/msvc2008/projects/easy3d.vcproj
+++ b/easy3d/platform/msvc2008/projects/easy3d.vcproj
@@ -215,6 +215,14 @@
 						>
 					</File>
 					<File
+						RelativePath="..\..\..\src\easy3d\ModelShader.cpp"
+						>
+					</File>
+					<File
+						RelativePath="..\..\..\src\easy3d\ModelShader.h"
+						>
+					</File>
+					<File
 						RelativePath="..\..\..\src\easy3d\ShapeShader.cpp"
 						>
 					</File>
