[CHANGED] 切换2d和3d的方式
Former-commit-id: 0abacd3958a68bd2db83c21567da69fda6fdb307

--- a/easyshader/platform/msvc2008/projects/libshader.vcproj
+++ b/easyshader/platform/msvc2008/projects/libshader.vcproj
@@ -257,6 +257,22 @@
 				>
 			</File>
 			<File
+				RelativePath="..\..\..\src\libshader\Shader2D.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\libshader\Shader2D.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\libshader\Shader3D.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\libshader\Shader3D.h"
+				>
+			</File>
+			<File
 				RelativePath="..\..\..\src\libshader\Uniform.cpp"
 				>
 			</File>
