--- a/easydb/platform/msvc2008/projects/easydb_cl.vcproj
+++ b/easydb/platform/msvc2008/projects/easydb_cl.vcproj
@@ -266,6 +266,14 @@
 				Name="pack"
 				>
 				<File
+					RelativePath="..\..\..\src\easydb_cl\BinRRP.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\easydb_cl\BinRRP.h"
+					>
+				</File>
+				<File
 					RelativePath="..\..\..\src\easydb\PackParticle2D.cpp"
 					>
 				</File>
