[ADDED] pvr loader
Former-commit-id: 882ff7728fad21c5d19ce114c3b967b22c41552b

--- a/epbin/platform/msvc2008/projects/epbin.vcproj
+++ b/epbin/platform/msvc2008/projects/epbin.vcproj
@@ -161,6 +161,14 @@
 				>
 			</File>
 			<File
+				RelativePath="..\..\..\src\PvrLoader.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\PvrLoader.h"
+				>
+			</File>
+			<File
 				RelativePath="..\..\..\src\TexLoader.cpp"
 				>
 			</File>
