--- a/epbin/platform/msvc2008/projects/epbin.vcproj
+++ b/epbin/platform/msvc2008/projects/epbin.vcproj
@@ -3,7 +3,7 @@
 	ProjectType="Visual C++"
 	Version="9.00"
 	Name="epbin"
-	ProjectGUID="{AAD82BAC-510C-4571-A420-5AE5EE7E29D6}"
+	ProjectGUID="{75D71727-132D-4BA3-A770-30F6EF459C76}"
 	RootNamespace="epbin"
 	Keyword="Win32Proj"
 	TargetFrameworkVersion="196613"
@@ -20,7 +20,7 @@
 			Name="Debug|Win32"
 			OutputDirectory="..\epbin\x86\Debug"
 			IntermediateDirectory="..\epbin\x86\Debug\obj"
-			ConfigurationType="4"
+			ConfigurationType="1"
 			CharacterSet="1"
 			>
 			<Tool
@@ -41,7 +41,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories="../../../external/png/include"
+				AdditionalIncludeDirectories="../../../external/png/include;../../../external/lua/include"
 				PreprocessorDefinitions="WIN32;_DEBUG;_LIB;_CRT_SECURE_NO_WARNINGS"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
@@ -60,10 +60,17 @@
 				Name="VCPreLinkEventTool"
 			/>
 			<Tool
-				Name="VCLibrarianTool"
+				Name="VCLinkerTool"
+				AdditionalDependencies="libpngd.lib lua.lib zlibd.lib lzmad.lib"
+				AdditionalLibraryDirectories="..\..\..\external\lua\lib;..\..\..\external\png\lib;..\..\..\external\zlib\lib;..\..\..\external\lzma\lib"
+				IgnoreAllDefaultLibraries="false"
+				GenerateDebugInformation="true"
 			/>
 			<Tool
 				Name="VCALinkTool"
+			/>
+			<Tool
+				Name="VCManifestTool"
 			/>
 			<Tool
 				Name="VCXDCMakeTool"
@@ -75,6 +82,9 @@
 				Name="VCFxCopTool"
 			/>
 			<Tool
+				Name="VCAppVerifierTool"
+			/>
+			<Tool
 				Name="VCPostBuildEventTool"
 			/>
 		</Configuration>
@@ -82,7 +92,7 @@
 			Name="Release|Win32"
 			OutputDirectory="..\epbin\x86\Release"
 			IntermediateDirectory="..\epbin\x86\Release\obj"
-			ConfigurationType="4"
+			ConfigurationType="1"
 			CharacterSet="1"
 			WholeProgramOptimization="1"
 			>
@@ -105,7 +115,7 @@
 				Name="VCCLCompilerTool"
 				Optimization="2"
 				EnableIntrinsicFunctions="true"
-				AdditionalIncludeDirectories="../../../external/png/include"
+				AdditionalIncludeDirectories="../../../external/png/include;../../../external/lua/include"
 				PreprocessorDefinitions="WIN32;NDEBUG;_LIB;_CRT_SECURE_NO_WARNINGS"
 				RuntimeLibrary="2"
 				EnableFunctionLevelLinking="true"
@@ -123,10 +133,15 @@
 				Name="VCPreLinkEventTool"
 			/>
 			<Tool
-				Name="VCLibrarianTool"
+				Name="VCLinkerTool"
+				AdditionalDependencies="libpng.lib lua.lib zlib.lib lzma.lib"
+				AdditionalLibraryDirectories="..\..\..\external\lua\lib;..\..\..\external\png\lib;..\..\..\external\zlib\lib;..\..\..\external\lzma\lib"
 			/>
 			<Tool
 				Name="VCALinkTool"
+			/>
+			<Tool
+				Name="VCManifestTool"
 			/>
 			<Tool
 				Name="VCXDCMakeTool"
@@ -138,6 +153,9 @@
 				Name="VCFxCopTool"
 			/>
 			<Tool
+				Name="VCAppVerifierTool"
+			/>
+			<Tool
 				Name="VCPostBuildEventTool"
 			/>
 		</Configuration>
@@ -145,68 +163,8 @@
 	<References>
 	</References>
 	<Files>
-		<Filter
-			Name="tex_loader"
-			>
-			<File
-				RelativePath="..\..\..\src\image_type.h"
-				>
-			</File>
-			<File
-				RelativePath="..\..\..\src\PngLoader.cpp"
-				>
-			</File>
-			<File
-				RelativePath="..\..\..\src\PngLoader.h"
-				>
-			</File>
-			<File
-				RelativePath="..\..\..\src\PvrLoader.cpp"
-				>
-			</File>
-			<File
-				RelativePath="..\..\..\src\PvrLoader.h"
-				>
-			</File>
-			<File
-				RelativePath="..\..\..\src\TexLoader.cpp"
-				>
-			</File>
-			<File
-				RelativePath="..\..\..\src\TexLoader.h"
-				>
-			</File>
-		</Filter>
 		<File
-			RelativePath="..\..\..\src\BinaryEPD.cpp"
-			>
-		</File>
-		<File
-			RelativePath="..\..\..\src\BinaryEPD.h"
-			>
-		</File>
-		<File
-			RelativePath="..\..\..\src\BinaryEPP.cpp"
-			>
-		</File>
-		<File
-			RelativePath="..\..\..\src\BinaryEPP.h"
-			>
-		</File>
-		<File
-			RelativePath="..\..\..\src\LuaDataHelper.cpp"
-			>
-		</File>
-		<File
-			RelativePath="..\..\..\src\LuaDataHelper.h"
-			>
-		</File>
-		<File
-			RelativePath="..\..\..\src\trans_old_ejoy2d_data.lua"
-			>
-		</File>
-		<File
-			RelativePath="..\..\..\src\typedef.h"
+			RelativePath="..\..\..\src\main.cpp"
 			>
 		</File>
 	</Files>
