--- a/.gitignore
+++ b/.gitignore
@@ -80,6 +80,7 @@ coceditor/platform/msvc2008/cocpackage
 coceditor/platform/msvc2008/imagebool
 coceditor/platform/msvc2008/libcoco
 epbin/platform/msvc2008/epbin
+epbin/platform/msvc2008/libepbin
 ejoy2d
 all/Debug
 all/Release
