[ADDED] pack epd
Former-commit-id: 810bc154a3ef6e6eb3dced94d08a492f2f5cd021

--- a/.gitignore
+++ b/.gitignore
@@ -81,6 +81,7 @@ coceditor/platform/msvc2008/imagebool
 coceditor/platform/msvc2008/libcoco
 epbin/platform/msvc2008/epbin
 epbin/platform/msvc2008/libepbin
+ejoy2d/platform/msvc2008/ejoy2d
 ejoy2d
 all/Debug
 all/Release
