--- a/epbin/platform/msvc2008/projects/libepbin.vcproj
+++ b/epbin/platform/msvc2008/projects/libepbin.vcproj
@@ -41,7 +41,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories="../../../external/png/include;../../../external/lua/include;../../../external/lzma/include"
+				AdditionalIncludeDirectories="../../../external/png/include;../../../external/lua/include;../../../external/lzma/include;../../../external/ejoy2d/include"
 				PreprocessorDefinitions="WIN32;_DEBUG;_LIB;_CRT_SECURE_NO_WARNINGS"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
@@ -105,7 +105,7 @@
 				Name="VCCLCompilerTool"
 				Optimization="2"
 				EnableIntrinsicFunctions="true"
-				AdditionalIncludeDirectories="../../../external/png/include;../../../external/lua/include;../../../external/lzma/include"
+				AdditionalIncludeDirectories="../../../external/png/include;../../../external/lua/include;../../../external/lzma/include;../../../external/ejoy2d/include"
 				PreprocessorDefinitions="WIN32;NDEBUG;_LIB;_CRT_SECURE_NO_WARNINGS"
 				RuntimeLibrary="2"
 				EnableFunctionLevelLinking="true"
