[ADDED] only read image header, 重构libimage的ImageIO
Former-commit-id: fb9b51a4067a7bb3edd721674bf1240f83bfa727

--- a/easyimage/platform/msvc2008/projects/libimage.vcproj
+++ b/easyimage/platform/msvc2008/projects/libimage.vcproj
@@ -217,11 +217,19 @@
 			Name="io"
 			>
 			<File
-				RelativePath="..\..\..\src\libimage\ImageWriter.cpp"
+				RelativePath="..\..\..\src\libimage\ImageIO.cpp"
 				>
 			</File>
 			<File
-				RelativePath="..\..\..\src\libimage\ImageWriter.h"
+				RelativePath="..\..\..\src\libimage\ImageIO.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\libimage\LibpngAdapter.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\libimage\LibpngAdapter.h"
 				>
 			</File>
 		</Filter>
