[ADDED] 0819demo，Triangle
Former-commit-id: 1c5378489d66b3f9bb6b72472d2efecc1a70e0a7

--- a/raytracer/platform/msvc2008/projects/libraytracer.vcproj
+++ b/raytracer/platform/msvc2008/projects/libraytracer.vcproj
@@ -149,7 +149,7 @@
 			Name="world"
 			>
 			<File
-				RelativePath="..\..\..\src\demo\Build08.21.cpp"
+				RelativePath="..\..\..\src\demo\Build08_19.cpp"
 				>
 			</File>
 			<File
@@ -230,6 +230,14 @@
 			</File>
 			<File
 				RelativePath="..\..\..\src\libraytracer\objects\Sphere.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\libraytracer\objects\Triangle.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\libraytracer\objects\Triangle.h"
 				>
 			</File>
 		</Filter>
