[CHANGED] 重构cocpackage，移到libcoco里
Former-commit-id: 2382f696849d1c514f0c470d0b092030fdfbf857

--- a/coceditor/platform/msvc2008/projects/libcoco.vcproj
+++ b/coceditor/platform/msvc2008/projects/libcoco.vcproj
@@ -149,44 +149,84 @@
 	<References>
 	</References>
 	<Files>
+		<Filter
+			Name="new"
+			>
+			<File
+				RelativePath="..\..\..\src\libcoco\CocoPackerNew.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\libcoco\CocoPackerNew.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\libcoco\PackLuaFile.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\libcoco\PackLuaFile.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\libcoco\ParserLuaFile.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\libcoco\ParserLuaFile.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\libcoco\TexturePacker.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\libcoco\TexturePacker.h"
+				>
+			</File>
+		</Filter>
+		<Filter
+			Name="old"
+			>
+			<File
+				RelativePath="..\..\..\src\libcoco\CocoPacker.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\libcoco\CocoPacker.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\libcoco\TextureMgr.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\libcoco\TextureMgr.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\libcoco\TPAdapter.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\libcoco\TPAdapter.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\libcoco\TPParser.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\libcoco\TPParser.h"
+				>
+			</File>
+		</Filter>
 		<File
-			RelativePath="..\..\..\src\libcoco\CocoPacker.cpp"
+			RelativePath="..\..\..\src\libcoco\SymbolDependanceSorter.cpp"
 			>
 		</File>
 		<File
-			RelativePath="..\..\..\src\libcoco\CocoPacker.h"
-			>
-		</File>
-		<File
-			RelativePath="..\..\..\src\libcoco\PackLuaFile.cpp"
-			>
-		</File>
-		<File
-			RelativePath="..\..\..\src\libcoco\PackLuaFile.h"
-			>
-		</File>
-		<File
-			RelativePath="..\..\..\src\libcoco\ParserLuaFile.cpp"
-			>
-		</File>
-		<File
-			RelativePath="..\..\..\src\libcoco\ParserLuaFile.h"
-			>
-		</File>
-		<File
-			RelativePath="..\..\..\src\libcoco\SymbolsPrepare.cpp"
-			>
-		</File>
-		<File
-			RelativePath="..\..\..\src\libcoco\SymbolsPrepare.h"
-			>
-		</File>
-		<File
-			RelativePath="..\..\..\src\libcoco\TexturePacker.cpp"
-			>
-		</File>
-		<File
-			RelativePath="..\..\..\src\libcoco\TexturePacker.h"
+			RelativePath="..\..\..\src\libcoco\SymbolDependanceSorter.h"
 			>
 		</File>
 	</Files>
