--- a/coceditor/platform/msvc2008/projects/cocpackage.vcproj
+++ b/coceditor/platform/msvc2008/projects/cocpackage.vcproj
@@ -63,7 +63,7 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="wxmsw30ud_gl.lib wxmsw30ud_propgrid.lib wxmsw30ud_adv.lib wxmsw30ud_stc.lib wxmsw30ud_core.lib wxbase30ud.lib wxscintillad.lib wxtiffd.lib wxjpegd.lib wxpngd.lib wxzlibd.lib comctl32.lib rpcrt4.lib Opengl32.lib GLee.lib jsond.lib SOIL.lib freetype250_D.lib lua.lib"
+				AdditionalDependencies="wxmsw30ud_gl.lib wxmsw30ud_propgrid.lib wxmsw30ud_adv.lib wxmsw30ud_stc.lib wxmsw30ud_core.lib wxbase30ud.lib wxscintillad.lib wxtiffd.lib wxjpegd.lib wxpngd.lib wxzlibd.lib comctl32.lib rpcrt4.lib Opengl32.lib GLee.lib jsond.lib SOIL.lib freetype250_D.lib lua.lib libpngd.lib"
 				OutputFile="..\cocpackage\x86\Debug\cocpackage.exe"
 				LinkIncremental="2"
 				AdditionalLibraryDirectories="..\..\..\..\drag2d\platform\msvc2008\lib;..\..\..\..\drag2d\platform\msvc2008\lib\wx"
@@ -143,7 +143,7 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="wxmsw30u_gl.lib wxmsw30u_propgrid.lib wxmsw30u_adv.lib wxmsw30u_stc.lib wxmsw30u_core.lib wxbase30u.lib wxscintilla.lib wxtiff.lib wxjpeg.lib wxpng.lib wxzlib.lib comctl32.lib rpcrt4.lib Opengl32.lib GLee.lib json.lib SOIL.lib freetype250.lib lua.lib"
+				AdditionalDependencies="wxmsw30u_gl.lib wxmsw30u_propgrid.lib wxmsw30u_adv.lib wxmsw30u_stc.lib wxmsw30u_core.lib wxbase30u.lib wxscintilla.lib wxtiff.lib wxjpeg.lib wxpng.lib wxzlib.lib comctl32.lib rpcrt4.lib Opengl32.lib GLee.lib json.lib SOIL.lib freetype250.lib lua.lib libpng.lib"
 				OutputFile="..\cocpackage\x86\Release\cocpackage.exe"
 				LinkIncremental="1"
 				AdditionalLibraryDirectories="..\..\..\..\drag2d\platform\msvc2008\lib;..\..\..\..\drag2d\platform\msvc2008\lib\wx"
@@ -182,47 +182,7 @@
 	</References>
 	<Files>
 		<File
-			RelativePath="..\..\..\src\coceditor\COCCode.cpp"
-			>
-		</File>
-		<File
-			RelativePath="..\..\..\src\coceditor\COCCode.h"
-			>
-		</File>
-		<File
-			RelativePath="..\..\..\src\coceditor\COCParser.cpp"
-			>
-		</File>
-		<File
-			RelativePath="..\..\..\src\coceditor\COCParser.h"
-			>
-		</File>
-		<File
-			RelativePath="..\..\..\src\coceditor\Context.cpp"
-			>
-		</File>
-		<File
-			RelativePath="..\..\..\src\coceditor\Context.h"
-			>
-		</File>
-		<File
 			RelativePath="..\..\..\src\cocpackage\main.cpp"
-			>
-		</File>
-		<File
-			RelativePath="..\..\..\src\coceditor\TexPackerAdapter.cpp"
-			>
-		</File>
-		<File
-			RelativePath="..\..\..\src\coceditor\TexPackerAdapter.h"
-			>
-		</File>
-		<File
-			RelativePath="..\..\..\src\coceditor\TexturesMgr.cpp"
-			>
-		</File>
-		<File
-			RelativePath="..\..\..\src\coceditor\TexturesMgr.h"
 			>
 		</File>
 	</Files>
