--- a/easydb/platform/msvc2008/projects/easydb_cl.vcproj
+++ b/easydb/platform/msvc2008/projects/easydb_cl.vcproj
@@ -63,7 +63,7 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="wxmsw30ud_gl.lib wxmsw30ud_propgrid.lib wxmsw30ud_adv.lib wxmsw30ud_stc.lib wxmsw30ud_core.lib wxbase30ud.lib wxscintillad.lib wxtiffd.lib wxjpegd.lib wxpngd.lib comctl32.lib rpcrt4.lib jsond.lib SOIL.lib freetype250_D.lib md5.lib opengl32.lib GLee.lib lua.lib libgifd.lib zlibd.lib lzmad.lib libpngd.lib"
+				AdditionalDependencies="wxmsw30ud_gl.lib wxmsw30ud_propgrid.lib wxmsw30ud_adv.lib wxmsw30ud_stc.lib wxmsw30ud_core.lib wxbase30ud.lib wxscintillad.lib wxtiffd.lib wxjpegd.lib wxpngd.lib comctl32.lib rpcrt4.lib jsond.lib SOIL.lib freetype250_D.lib md5d.lib opengl32.lib GLee.lib lua.lib libgifd.lib zlibd.lib lzmad.lib libpngd.lib"
 				OutputFile="..\easydb_cl\x86\Debug\easydb_cl.exe"
 				LinkIncremental="2"
 				AdditionalLibraryDirectories="..\..\..\..\drag2d\platform\msvc2008\lib;..\..\..\..\drag2d\platform\msvc2008\lib\wx;..\..\..\..\epbin\external\png\lib;..\..\..\..\epbin\external\lua\lib;..\..\..\..\epbin\external\zlib\lib;..\..\..\..\epbin\external\lzma\lib"
@@ -561,6 +561,14 @@
 		</Filter>
 		<File
 			RelativePath="..\..\..\src\easydb_cl\main.cpp"
+			>
+		</File>
+		<File
+			RelativePath="..\..\..\src\easydb_cl\main.h"
+			>
+		</File>
+		<File
+			RelativePath="..\..\..\src\easydb_cl\main_old.cpp"
 			>
 		</File>
 	</Files>
