[ADDED] chapter9 demo
Former-commit-id: 9d3877fd074c29b646a680fd6d3e2db094fcb8c2

--- a/raytracer/platform/msvc2008/projects/libraytracer.vcproj
+++ b/raytracer/platform/msvc2008/projects/libraytracer.vcproj
@@ -149,7 +149,15 @@
 			Name="world"
 			>
 			<File
-				RelativePath="..\..\..\src\demo\Build08_19.cpp"
+				RelativePath="..\..\..\src\demo\Build09_09.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\demo\Build09_10.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\demo\Build09_11.cpp"
 				>
 			</File>
 			<File
@@ -338,6 +346,14 @@
 			</File>
 			<File
 				RelativePath="..\..\..\src\libraytracer\maths\maths.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\libraytracer\maths\Matrix.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\libraytracer\maths\Matrix.h"
 				>
 			</File>
 			<File
