[FIXED] 合图打包时读取图片trim的信息
Former-commit-id: d7ced3117b943ca7d1d607fecdece24c8ac57339

--- a/easypacker/platform/msvc2008/projects/libpacker.vcproj
+++ b/easypacker/platform/msvc2008/projects/libpacker.vcproj
@@ -184,6 +184,14 @@
 				Name="normal"
 				>
 				<File
+					RelativePath="..\..\..\src\libpacker\ImageTrimData.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\libpacker\ImageTrimData.h"
+					>
+				</File>
+				<File
 					RelativePath="..\..\..\src\libpacker\NormalPack.cpp"
 					>
 				</File>
