--- a/raytracer/platform/msvc2008/projects/libraytracer.vcproj
+++ b/raytracer/platform/msvc2008/projects/libraytracer.vcproj
@@ -149,15 +149,11 @@
 			Name="world"
 			>
 			<File
-				RelativePath="..\..\..\src\demo\Build09_09.cpp"
+				RelativePath="..\..\..\src\demo\Build08_21.cpp"
 				>
 			</File>
 			<File
-				RelativePath="..\..\..\src\demo\Build09_10.cpp"
-				>
-			</File>
-			<File
-				RelativePath="..\..\..\src\demo\Build09_11.cpp"
+				RelativePath="..\..\..\src\demo\Build08_22.cpp"
 				>
 			</File>
 			<File
@@ -217,6 +213,22 @@
 				>
 			</File>
 			<File
+				RelativePath="..\..\..\src\libraytracer\objects\Instance.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\libraytracer\objects\Instance.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\libraytracer\objects\OpenCylinder.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\libraytracer\objects\OpenCylinder.h"
+				>
+			</File>
+			<File
 				RelativePath="..\..\..\src\libraytracer\objects\Plane.cpp"
 				>
 			</File>
@@ -246,6 +258,14 @@
 			</File>
 			<File
 				RelativePath="..\..\..\src\libraytracer\objects\Triangle.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\libraytracer\objects\WireframeBox.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\libraytracer\objects\WireframeBox.h"
 				>
 			</File>
 		</Filter>
@@ -362,6 +382,10 @@
 			</File>
 			<File
 				RelativePath="..\..\..\src\libraytracer\maths\Point2D.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\libraytracer\maths\Point3D.cpp"
 				>
 			</File>
 			<File
