--- a/easydb/platform/msvc2008/projects/easydb_cl.vcproj
+++ b/easydb/platform/msvc2008/projects/easydb_cl.vcproj
@@ -396,6 +396,14 @@
 						RelativePath="..\..\..\src\easydb_cl\OutlineToPolygon.h"
 						>
 					</File>
+					<File
+						RelativePath="..\..\..\src\easydb_cl\OutlineToTriStrip.cpp"
+						>
+					</File>
+					<File
+						RelativePath="..\..\..\src\easydb_cl\OutlineToTriStrip.h"
+						>
+					</File>
 				</Filter>
 				<Filter
 					Name="transform"
