add pvr encode decode
Former-commit-id: 7dfcd27742dbc1420e82287f1232d237a56ce560

--- a/ejoy2d/platform/msvc2008/projects/ejoy2d.vcproj
+++ b/ejoy2d/platform/msvc2008/projects/ejoy2d.vcproj
@@ -156,6 +156,14 @@
 			>
 		</File>
 		<File
+			RelativePath="..\..\..\src\dtex_pvr.c"
+			>
+		</File>
+		<File
+			RelativePath="..\..\..\src\dtex_pvr.h"
+			>
+		</File>
+		<File
 			RelativePath="..\..\..\src\dtex_rrp.c"
 			>
 		</File>
