--- a/drag2d/platform/msvc2008/projects/libdrag2d.vcproj
+++ b/drag2d/platform/msvc2008/projects/libdrag2d.vcproj
@@ -2024,6 +2024,14 @@
 					RelativePath="..\..\..\src\drag2d\widgets\PasteSymbolRandomWidget.h"
 					>
 				</File>
+				<File
+					RelativePath="..\..\..\src\drag2d\widgets\SliderCtrl.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\drag2d\widgets\SliderCtrl.h"
+					>
+				</File>
 			</Filter>
 		</Filter>
 		<Filter
