--- a/easyterrain2d/platform/msvc2008/projects/libterrain2d.vcproj
+++ b/easyterrain2d/platform/msvc2008/projects/libterrain2d.vcproj
@@ -41,7 +41,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories="..\..\..\..\drag2d\src\common;..\..\..\..\drag2d\src\drag2d;..\..\..\..\drag2d\platform\msvc2008\include;&quot;..\..\..\..\drag2d\src\common\lua-5.2.3\src&quot;;..\..\..\..\easy3d\src\easy3d"
+				AdditionalIncludeDirectories="..\..\..\..\drag2d\src\common;..\..\..\..\drag2d\src\drag2d;..\..\..\..\drag2d\platform\msvc2008\include;&quot;..\..\..\..\drag2d\src\common\lua-5.2.3\src&quot;;..\..\..\..\easyshape\src;..\..\..\..\easymesh\src"
 				PreprocessorDefinitions="WIN32;_DEBUG;_LIB;_CRT_SECURE_NO_WARNINGS"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
@@ -105,7 +105,7 @@
 				Name="VCCLCompilerTool"
 				Optimization="2"
 				EnableIntrinsicFunctions="true"
-				AdditionalIncludeDirectories="..\..\..\..\drag2d\src\common;..\..\..\..\drag2d\src\drag2d;..\..\..\..\drag2d\platform\msvc2008\include;&quot;..\..\..\..\drag2d\src\common\lua-5.2.3\src&quot;;..\..\..\..\easy3d\src\easy3d"
+				AdditionalIncludeDirectories="..\..\..\..\drag2d\src\common;..\..\..\..\drag2d\src\drag2d;..\..\..\..\drag2d\platform\msvc2008\include;&quot;..\..\..\..\drag2d\src\common\lua-5.2.3\src&quot;;..\..\..\..\easyshape\src;..\..\..\..\easymesh\src"
 				PreprocessorDefinitions="WIN32;NDEBUG;_LIB;_CRT_SECURE_NO_WARNINGS"
 				RuntimeLibrary="2"
 				EnableFunctionLevelLinking="true"
@@ -202,12 +202,92 @@
 			</Filter>
 		</Filter>
 		<Filter
-			Name="task"
+			Name="edit"
 			>
+			<Filter
+				Name="create"
+				>
+				<File
+					RelativePath="..\..\..\src\libterrain2d\CreateRegionCMPT.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\libterrain2d\CreateRegionCMPT.h"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\libterrain2d\CreateRegionOP.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\libterrain2d\CreateRegionOP.h"
+					>
+				</File>
+			</Filter>
+			<Filter
+				Name="wave"
+				>
+				<File
+					RelativePath="..\..\..\src\libterrain2d\WaveVerticesCMPT.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\libterrain2d\WaveVerticesCMPT.h"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\libterrain2d\WaveVerticesOP.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\libterrain2d\WaveVerticesOP.h"
+					>
+				</File>
+			</Filter>
+			<Filter
+				Name="blend"
+				>
+				<File
+					RelativePath="..\..\..\src\libterrain2d\BlendTextureCMPT.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\libterrain2d\BlendTextureCMPT.h"
+					>
+				</File>
+			</Filter>
+			<Filter
+				Name="move"
+				>
+				<File
+					RelativePath="..\..\..\src\libterrain2d\MoveTexcoordsCMPT.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\libterrain2d\MoveTexcoordsCMPT.h"
+					>
+				</File>
+			</Filter>
 		</Filter>
 		<Filter
 			Name="dataset"
 			>
+			<File
+				RelativePath="..\..\..\src\libterrain2d\MeshShape.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\libterrain2d\MeshShape.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\libterrain2d\OceanMesh.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\libterrain2d\OceanMesh.h"
+				>
+			</File>
 		</Filter>
 		<File
 			RelativePath="..\..\..\src\libterrain2d\config.h"
