[ADDED] ocean demo to terrain3d
Former-commit-id: 0dcb9d7b0e2f5a158a1378c8d825a3add8865cb0

--- a/easyterrain3d/platform/msvc2008/projects/libterrain3d.vcproj
+++ b/easyterrain3d/platform/msvc2008/projects/libterrain3d.vcproj
@@ -188,6 +188,18 @@
 					>
 				</File>
 			</Filter>
+			<Filter
+				Name="ocean"
+				>
+				<File
+					RelativePath="..\..\..\src\libterrain3d\DemoOcean.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\libterrain3d\DemoOcean.h"
+					>
+				</File>
+			</Filter>
 		</Filter>
 		<Filter
 			Name="view"
